# portaki-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Doxyfile  LICENSE  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  renovate.json  tsconfig.typedoc.json  typedoc.json
.cursor/rules/: sdk-module-emails.mdc  sdk.mdc
.github/: BRANCH_POLICY.md  CI.md  PULL_REQUEST_TEMPLATE.md  maven-settings.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/checkout-portaki-sdk/: action.yml
.github/actions/java-sdk-verify/: action.yml
.github/actions/maven-gpr-install-java-sdk/: action.yml  install-java-sdk-local.sh  maven-gpr-settings.xml
.github/actions/nodejs-npm-sdk-javascript/: action.yml
.github/actions/pnpm-workspace-setup/: action.yml
.github/scripts/: configure-repo-rulesets.mjs  detect-post-merge-push.cjs  sdk_prev_release_tag.py
.github/workflows/: bootstrap-crates-publish.yml  ci-verify.yml  ci.yml  publish-crates.yml  publish-ghcr-java-sdk.yml  publish-maven-java-test.yml  publish-maven-sdk.yml  publish-maven.yml  publish-modules-npm.yml  publish-npm-packages.yml  publish-npm-sdk.yml  publish-npm.yml  release-please.yml  release.yml  sdk-release-main.yml  validate-modules.yml
contracts/: host-ops.json
crates/portaki-cli/: Cargo.toml  README.md
crates/portaki-cli/src/: main.rs
crates/portaki-cli/src/commands/: build.rs  catalog.rs  dev.rs  docs.rs  init.rs  inspect.rs  lint.rs  mod.rs  publish.rs  test.rs
crates/portaki-cli/src/manifest/: generator.rs  migration_bundle.rs  mod.rs  operations_bundle.rs  validator.rs
crates/portaki-cli/src/oci/: auth.rs  mod.rs  pack.rs
crates/portaki-connectors/: Cargo.toml  README.md
crates/portaki-connectors/src/: google_places.rs  lib.rs  mapbox.rs  nuki.rs  open_weather.rs  osm_nominatim.rs
crates/portaki-sdk/: Cargo.toml  README.md  build.rs  sdui_primitives.json
crates/portaki-sdk-macros/: Cargo.toml  README.md
crates/portaki-sdk-macros/src/: capability.rs  command.rs  connector.rs  emit.rs  entity.rs  event_handler.rs  lib.rs  module.rs  query.rs  surface.rs  wasm_handler.rs  wire.rs  wire_lit.rs
crates/portaki-sdk/src/: capability.rs  context.rs  email.rs  error.rs  ids.rs  lib.rs  manifest.rs
crates/portaki-sdk/src/contracts/: mod.rs  platform.rs  shell.rs  smart_lock.rs
crates/portaki-sdk/src/host/: capabilities.rs  connectors.rs  credentials.rs  email.rs  events.rs  geo.rs  i18n.rs  images.rs  kv.rs  log.rs  mod.rs  module.rs  notifications.rs  repo.rs  runtime.rs  time.rs  wasm_getrandom.rs
crates/portaki-sdk/src/sdui/: action.rs  common.rs  component.rs  mod.rs  surface.rs
crates/portaki-sdk/src/sdui/primitives/: mod.rs
crates/portaki-sdk/src/wasm/: dispatch.rs  envelope.rs  extism_host.rs  mod.rs  registry.rs
crates/portaki-sdk/tests/: host_ops_contract.rs  macro_ui.rs  temperature_variant.rs
crates/portaki-sdk/tests/ui/capability/: const_path_with_explicit_id.rs  string_literal.rs
crates/portaki-sdk/tests/ui/capability-fail/: const_path_without_id.rs  const_path_without_id.stderr
crates/portaki-test-utils/: Cargo.toml  README.md
crates/portaki-test-utils/src/: assertions.rs  fixtures.rs  lib.rs  mock_host.rs
docs/: RELEASE.md  assemblyscript-backend.md  code-documentation.md  connectors-and-credentials.md  deployment.md  getting-started.md  module-authoring.md  module-emails.md  module-layout.md  typed-ids.md
docs-site/: index.md  package.json  vercel.json
docs-site/.vitepress/: config.ts
docs-site/guide/: assemblyscript-backend.md  example-rules.md  getting-started.md  hosting.md  module-emails.md  test-support.md
examples/rules/: .gitignore  package.json  portaki.module.json
examples/rules/src/: portaki.module.ts
java/: pom.xml
javascript/: package-lock.json  package.json  tsconfig.build.json
javascript/src/: index.ts
js/: package.json  tsconfig.build.json
js/src/: index.ts
js/src/context/: PortakiProvider.tsx  portaki-internal-context.tsx
js/src/hooks/: portaki-hooks.tsx
js/src/security/: hmac.ts
js/src/server/: derive-key.ts  index.ts  sign-hmac-node.ts
js/src/slots/: slot-registry.tsx
js/src/types/: index.ts
legacy/: README.md
legacy/java/: README.md  pom.xml
legacy/java-test-support/: pom.xml
modules/appliances/: package.json
modules/checklist/: package.json
modules/checklist/src/: index.tsx
modules/events/: README.md  package.json
modules/pre-arrival-form/frontend/: package.json
modules/rules/: package.json
modules/train/: package.json
schema/: module.v1.json
scripts/: assert-no-file-deps.mjs  sync-docs-to-site.mjs  validate-manifests.js
sdk/examples/rules/: package.json
sdk/guest/: package.json  tsconfig.json
sdk/guest/src/: index.ts
sdk/java/: README.md  pom.xml
sdk/java-test-support/: pom.xml
sdk/javascript/: README.md  package-lock.json  package.json
sdk/javascript/src/: builder.ts  index.ts
sdk/module-cli/: package.json  tsconfig.build.json
sdk/module-sdk/: README.md  package-lock.json  package.json
sdk/module-sdk/src/: index.ts
sdk/module-test-support/: package.json  tsconfig.build.json  tsconfig.json
sdk/module-test-support/schema/: module.v1.json
sdk/module-test-support/scripts/: copy-schema.mjs
sdk/module-test-support/src/: assert-module-definition.ts  fixtures.ts  render-module.tsx  validate-manifest.ts  vitest-preset.ts  vitest-setup.ts
sdk/modules/appliances/: README.md  package.json
sdk/modules/checklist/: README.md  package.json
sdk/modules/events/: package.json
sdk/modules/pre-arrival-form/: README.md
sdk/modules/rules/: README.md  package.json
sdk/modules/train/: README.md  (+1 more)
templates/default-module/: Cargo.toml  Cargo.toml.template
templates/default-module/.github/workflows/: release.yml
templates/default-module/i18n/: en-US.json  fr-FR.json
templates/default-module/src/: ids.rs  lib.rs
templates/default-module/src/guest/: mod.rs
templates/default-module/src/host/: mod.rs
templates/empty-module/: Cargo.toml.template
(+108 files in other folders)
