[package]
name = "portaki-cli"
description = "Portaki module CLI — init, build, lint, test, publish"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "portaki"
path = "src/main.rs"

[dependencies]
portaki-sdk = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
