[package]
name = "portaki-cli"
description = "Portaki module CLI (portaki) — init, build, lint, test, and OCI publish"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/portaki-cli"
categories = ["command-line-utilities", "development-tools", "wasm"]
keywords = ["portaki", "cli", "wasm", "oci", "extism"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "portaki"
path = "src/main.rs"
doc = false

[dependencies]
portaki-sdk = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }
oci-distribution = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
