[package]
name = "portaki-sdk-macros"
description = "Proc-macros for Portaki modules — manifest metadata emission at compile time"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
serde_json = "1"
