[package]
name = "portaki-sdk-macros"
description = "Proc-macros for Portaki modules — compile-time manifest emissions for portaki build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/portaki-sdk-macros"
categories = ["development-tools::procedural-macro-helpers", "wasm"]
keywords = ["portaki", "proc-macro", "wasm", "extism", "manifest"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
serde_json = "1"
