[package]
name = "portaki-sdk"
description = "Authoring toolkit for Portaki Extism Wasm modules — host APIs, SDUI catalog, and manifest macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/portaki-sdk"
categories = ["wasm", "api-bindings", "development-tools"]
keywords = ["portaki", "wasm", "extism", "sdui", "module"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
portaki-sdk-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
getrandom = { workspace = true }
chrono = { workspace = true }
inventory = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
extism-pdk = "1.4"

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
portaki-test-utils = { workspace = true }
serde_json = { workspace = true }
trybuild = "1"
